// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Header: View Conditional rendering renders properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View
    currentLocation={
      Object {
        "display": "Laboratory",
      }
    }
    currentUser="admin"
    locationDropdown={true}
    locations={
      Array [
        Object {
          "display": "Impatient",
          "uuid": "6sedds-tahs7hh",
        },
      ]
    }
    setCurrentLocation={[MockFunction]}
    toggleState={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="logo"
        >
          <a
            href="../../referenceapplication/home.page"
          >
            <img
              alt=""
              src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
            />
          </a>
        </div>,
        <ul
          className="user-options"
        >
          <li
            className="identifier"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            tabIndex="0"
          >
            <i
              className="icon-user small"
            />
            admin
            <i
              className="icon-caret-down appui-icon-caret-down link"
            />
            <i
              className="icon-caret-up link appui-toggle"
              style={
                Object {
                  "display": "none",
                }
              }
            />
          </li>
          <li
            className="change-location"
          >
            <a
              href="#"
              onClick={[Function]}
            >
              <i
                className="icon-map-marker small"
              />
              <span
                id="selected-location"
              >
                Laboratory
              </span>
              <i
                className="link icon-caret-down"
              />
            </a>
            <div>
              <ul
                className="location-container"
              >
                <li
                  className=""
                  onClick={[Function]}
                  role="button"
                >
                  Impatient
                </li>
              </ul>
            </div>
          </li>
          <li
            className="logout"
          >
            <a
              href="../../appui/header/logout.action?successUrl=undefined"
            >
              Logout
              <i
                className="icon-signout small"
              />
            </a>
          </li>
        </ul>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            href="../../referenceapplication/home.page"
          >
            <img
              alt=""
              src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
            />
          </a>,
          "className": "logo",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt=""
              src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
            />,
            "href": "../../referenceapplication/home.page",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "",
              "src": "../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "a",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="identifier"
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              tabIndex="0"
            >
              <i
                className="icon-user small"
              />
              admin
              <i
                className="icon-caret-down appui-icon-caret-down link"
              />
              <i
                className="icon-caret-up link appui-toggle"
                style={
                  Object {
                    "display": "none",
                  }
                }
              />
            </li>,
            <li
              className="change-location"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  className="icon-map-marker small"
                />
                <span
                  id="selected-location"
                >
                  Laboratory
                </span>
                <i
                  className="link icon-caret-down"
                />
              </a>
              <div>
                <ul
                  className="location-container"
                >
                  <li
                    className=""
                    onClick={[Function]}
                    role="button"
                  >
                    Impatient
                  </li>
                </ul>
              </div>
            </li>,
            <li
              className="logout"
            >
              <a
                href="../../appui/header/logout.action?successUrl=undefined"
              >
                Logout
                <i
                  className="icon-signout small"
                />
              </a>
            </li>,
          ],
          "className": "user-options",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <i
                  className="icon-user small"
                />,
                "admin",
                <i
                  className="icon-caret-down appui-icon-caret-down link"
                />,
                <i
                  className="icon-caret-up link appui-toggle"
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                />,
                undefined,
              ],
              "className": "identifier",
              "onClick": [Function],
              "role": "button",
              "style": Object {
                "cursor": "pointer",
              },
              "tabIndex": "0",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "icon-user small",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              "admin",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "icon-caret-down appui-icon-caret-down link",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "icon-caret-up link appui-toggle",
                  "style": Object {
                    "display": "none",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              undefined,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  href="#"
                  onClick={[Function]}
                >
                  <i
                    className="icon-map-marker small"
                  />
                  <span
                    id="selected-location"
                  >
                    Laboratory
                  </span>
                  <i
                    className="link icon-caret-down"
                  />
                </a>,
                <div>
                  <ul
                    className="location-container"
                  >
                    <li
                      className=""
                      onClick={[Function]}
                      role="button"
                    >
                      Impatient
                    </li>
                  </ul>
                </div>,
              ],
              "className": "change-location",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <i
                      className="icon-map-marker small"
                    />,
                    <span
                      id="selected-location"
                    >
                      Laboratory
                    </span>,
                    <i
                      className="link icon-caret-down"
                    />,
                  ],
                  "href": "#",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "icon-map-marker small",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Laboratory",
                      "id": "selected-location",
                    },
                    "ref": null,
                    "rendered": "Laboratory",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "link icon-caret-down",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                ],
                "type": "a",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <ul
                    className="location-container"
                  >
                    <li
                      className=""
                      onClick={[Function]}
                      role="button"
                    >
                      Impatient
                    </li>
                  </ul>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <li
                        className=""
                        onClick={[Function]}
                        role="button"
                      >
                        Impatient
                      </li>,
                    ],
                    "className": "location-container",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "6sedds-tahs7hh",
                      "nodeType": "host",
                      "props": Object {
                        "children": "Impatient",
                        "className": "",
                        "onClick": [Function],
                        "role": "button",
                      },
                      "ref": null,
                      "rendered": "Impatient",
                      "type": "li",
                    },
                  ],
                  "type": "ul",
                },
                "type": "div",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="../../appui/header/logout.action?successUrl=undefined"
              >
                Logout
                <i
                  className="icon-signout small"
                />
              </a>,
              "className": "logout",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Logout",
                  <i
                    className="icon-signout small"
                  />,
                ],
                "href": "../../appui/header/logout.action?successUrl=undefined",
              },
              "ref": null,
              "rendered": Array [
                "Logout",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-signout small",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "a",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="logo"
          >
            <a
              href="../../referenceapplication/home.page"
            >
              <img
                alt=""
                src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
              />
            </a>
          </div>,
          <ul
            className="user-options"
          >
            <li
              className="identifier"
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              tabIndex="0"
            >
              <i
                className="icon-user small"
              />
              admin
              <i
                className="icon-caret-down appui-icon-caret-down link"
              />
              <i
                className="icon-caret-up link appui-toggle"
                style={
                  Object {
                    "display": "none",
                  }
                }
              />
            </li>
            <li
              className="change-location"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  className="icon-map-marker small"
                />
                <span
                  id="selected-location"
                >
                  Laboratory
                </span>
                <i
                  className="link icon-caret-down"
                />
              </a>
              <div>
                <ul
                  className="location-container"
                >
                  <li
                    className=""
                    onClick={[Function]}
                    role="button"
                  >
                    Impatient
                  </li>
                </ul>
              </div>
            </li>
            <li
              className="logout"
            >
              <a
                href="../../appui/header/logout.action?successUrl=undefined"
              >
                Logout
                <i
                  className="icon-signout small"
                />
              </a>
            </li>
          </ul>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              href="../../referenceapplication/home.page"
            >
              <img
                alt=""
                src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
              />
            </a>,
            "className": "logo",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img
                alt=""
                src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
              />,
              "href": "../../referenceapplication/home.page",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "",
                "src": "../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "a",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="identifier"
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
                tabIndex="0"
              >
                <i
                  className="icon-user small"
                />
                admin
                <i
                  className="icon-caret-down appui-icon-caret-down link"
                />
                <i
                  className="icon-caret-up link appui-toggle"
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                />
              </li>,
              <li
                className="change-location"
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  <i
                    className="icon-map-marker small"
                  />
                  <span
                    id="selected-location"
                  >
                    Laboratory
                  </span>
                  <i
                    className="link icon-caret-down"
                  />
                </a>
                <div>
                  <ul
                    className="location-container"
                  >
                    <li
                      className=""
                      onClick={[Function]}
                      role="button"
                    >
                      Impatient
                    </li>
                  </ul>
                </div>
              </li>,
              <li
                className="logout"
              >
                <a
                  href="../../appui/header/logout.action?successUrl=undefined"
                >
                  Logout
                  <i
                    className="icon-signout small"
                  />
                </a>
              </li>,
            ],
            "className": "user-options",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <i
                    className="icon-user small"
                  />,
                  "admin",
                  <i
                    className="icon-caret-down appui-icon-caret-down link"
                  />,
                  <i
                    className="icon-caret-up link appui-toggle"
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                  />,
                  undefined,
                ],
                "className": "identifier",
                "onClick": [Function],
                "role": "button",
                "style": Object {
                  "cursor": "pointer",
                },
                "tabIndex": "0",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-user small",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "admin",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-caret-down appui-icon-caret-down link",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-caret-up link appui-toggle",
                    "style": Object {
                      "display": "none",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                undefined,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <i
                      className="icon-map-marker small"
                    />
                    <span
                      id="selected-location"
                    >
                      Laboratory
                    </span>
                    <i
                      className="link icon-caret-down"
                    />
                  </a>,
                  <div>
                    <ul
                      className="location-container"
                    >
                      <li
                        className=""
                        onClick={[Function]}
                        role="button"
                      >
                        Impatient
                      </li>
                    </ul>
                  </div>,
                ],
                "className": "change-location",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <i
                        className="icon-map-marker small"
                      />,
                      <span
                        id="selected-location"
                      >
                        Laboratory
                      </span>,
                      <i
                        className="link icon-caret-down"
                      />,
                    ],
                    "href": "#",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "icon-map-marker small",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Laboratory",
                        "id": "selected-location",
                      },
                      "ref": null,
                      "rendered": "Laboratory",
                      "type": "span",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "link icon-caret-down",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                  ],
                  "type": "a",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <ul
                      className="location-container"
                    >
                      <li
                        className=""
                        onClick={[Function]}
                        role="button"
                      >
                        Impatient
                      </li>
                    </ul>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <li
                          className=""
                          onClick={[Function]}
                          role="button"
                        >
                          Impatient
                        </li>,
                      ],
                      "className": "location-container",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": "6sedds-tahs7hh",
                        "nodeType": "host",
                        "props": Object {
                          "children": "Impatient",
                          "className": "",
                          "onClick": [Function],
                          "role": "button",
                        },
                        "ref": null,
                        "rendered": "Impatient",
                        "type": "li",
                      },
                    ],
                    "type": "ul",
                  },
                  "type": "div",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="../../appui/header/logout.action?successUrl=undefined"
                >
                  Logout
                  <i
                    className="icon-signout small"
                  />
                </a>,
                "className": "logout",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Logout",
                    <i
                      className="icon-signout small"
                    />,
                  ],
                  "href": "../../appui/header/logout.action?successUrl=undefined",
                },
                "ref": null,
                "rendered": Array [
                  "Logout",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "icon-signout small",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                ],
                "type": "a",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Component: Header: View Conditional rendering set location option as selected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View
    currentLocation={
      Object {
        "display": "Laboratory",
      }
    }
    currentUser="admin"
    locationDropdown={true}
    locations={
      Array [
        Object {
          "display": "Laboratory",
          "uuid": "6sedds-tahs7hh",
        },
      ]
    }
    setCurrentLocation={[MockFunction]}
    toggleState={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="logo"
        >
          <a
            href="../../referenceapplication/home.page"
          >
            <img
              alt=""
              src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
            />
          </a>
        </div>,
        <ul
          className="user-options"
        >
          <li
            className="identifier"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            tabIndex="0"
          >
            <i
              className="icon-user small"
            />
            admin
            <i
              className="icon-caret-down appui-icon-caret-down link"
            />
            <i
              className="icon-caret-up link appui-toggle"
              style={
                Object {
                  "display": "none",
                }
              }
            />
          </li>
          <li
            className="change-location"
          >
            <a
              href="#"
              onClick={[Function]}
            >
              <i
                className="icon-map-marker small"
              />
              <span
                id="selected-location"
              >
                Laboratory
              </span>
              <i
                className="link icon-caret-down"
              />
            </a>
            <div>
              <ul
                className="location-container"
              >
                <li
                  className="selected"
                  onClick={[Function]}
                  role="button"
                >
                  Laboratory
                </li>
              </ul>
            </div>
          </li>
          <li
            className="logout"
          >
            <a
              href="../../appui/header/logout.action?successUrl=undefined"
            >
              Logout
              <i
                className="icon-signout small"
              />
            </a>
          </li>
        </ul>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            href="../../referenceapplication/home.page"
          >
            <img
              alt=""
              src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
            />
          </a>,
          "className": "logo",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt=""
              src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
            />,
            "href": "../../referenceapplication/home.page",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "",
              "src": "../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "a",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="identifier"
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              tabIndex="0"
            >
              <i
                className="icon-user small"
              />
              admin
              <i
                className="icon-caret-down appui-icon-caret-down link"
              />
              <i
                className="icon-caret-up link appui-toggle"
                style={
                  Object {
                    "display": "none",
                  }
                }
              />
            </li>,
            <li
              className="change-location"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  className="icon-map-marker small"
                />
                <span
                  id="selected-location"
                >
                  Laboratory
                </span>
                <i
                  className="link icon-caret-down"
                />
              </a>
              <div>
                <ul
                  className="location-container"
                >
                  <li
                    className="selected"
                    onClick={[Function]}
                    role="button"
                  >
                    Laboratory
                  </li>
                </ul>
              </div>
            </li>,
            <li
              className="logout"
            >
              <a
                href="../../appui/header/logout.action?successUrl=undefined"
              >
                Logout
                <i
                  className="icon-signout small"
                />
              </a>
            </li>,
          ],
          "className": "user-options",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <i
                  className="icon-user small"
                />,
                "admin",
                <i
                  className="icon-caret-down appui-icon-caret-down link"
                />,
                <i
                  className="icon-caret-up link appui-toggle"
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                />,
                undefined,
              ],
              "className": "identifier",
              "onClick": [Function],
              "role": "button",
              "style": Object {
                "cursor": "pointer",
              },
              "tabIndex": "0",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "icon-user small",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              "admin",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "icon-caret-down appui-icon-caret-down link",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "icon-caret-up link appui-toggle",
                  "style": Object {
                    "display": "none",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              undefined,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  href="#"
                  onClick={[Function]}
                >
                  <i
                    className="icon-map-marker small"
                  />
                  <span
                    id="selected-location"
                  >
                    Laboratory
                  </span>
                  <i
                    className="link icon-caret-down"
                  />
                </a>,
                <div>
                  <ul
                    className="location-container"
                  >
                    <li
                      className="selected"
                      onClick={[Function]}
                      role="button"
                    >
                      Laboratory
                    </li>
                  </ul>
                </div>,
              ],
              "className": "change-location",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <i
                      className="icon-map-marker small"
                    />,
                    <span
                      id="selected-location"
                    >
                      Laboratory
                    </span>,
                    <i
                      className="link icon-caret-down"
                    />,
                  ],
                  "href": "#",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "icon-map-marker small",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Laboratory",
                      "id": "selected-location",
                    },
                    "ref": null,
                    "rendered": "Laboratory",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "link icon-caret-down",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                ],
                "type": "a",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <ul
                    className="location-container"
                  >
                    <li
                      className="selected"
                      onClick={[Function]}
                      role="button"
                    >
                      Laboratory
                    </li>
                  </ul>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <li
                        className="selected"
                        onClick={[Function]}
                        role="button"
                      >
                        Laboratory
                      </li>,
                    ],
                    "className": "location-container",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "6sedds-tahs7hh",
                      "nodeType": "host",
                      "props": Object {
                        "children": "Laboratory",
                        "className": "selected",
                        "onClick": [Function],
                        "role": "button",
                      },
                      "ref": null,
                      "rendered": "Laboratory",
                      "type": "li",
                    },
                  ],
                  "type": "ul",
                },
                "type": "div",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="../../appui/header/logout.action?successUrl=undefined"
              >
                Logout
                <i
                  className="icon-signout small"
                />
              </a>,
              "className": "logout",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Logout",
                  <i
                    className="icon-signout small"
                  />,
                ],
                "href": "../../appui/header/logout.action?successUrl=undefined",
              },
              "ref": null,
              "rendered": Array [
                "Logout",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-signout small",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "a",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="logo"
          >
            <a
              href="../../referenceapplication/home.page"
            >
              <img
                alt=""
                src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
              />
            </a>
          </div>,
          <ul
            className="user-options"
          >
            <li
              className="identifier"
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              tabIndex="0"
            >
              <i
                className="icon-user small"
              />
              admin
              <i
                className="icon-caret-down appui-icon-caret-down link"
              />
              <i
                className="icon-caret-up link appui-toggle"
                style={
                  Object {
                    "display": "none",
                  }
                }
              />
            </li>
            <li
              className="change-location"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  className="icon-map-marker small"
                />
                <span
                  id="selected-location"
                >
                  Laboratory
                </span>
                <i
                  className="link icon-caret-down"
                />
              </a>
              <div>
                <ul
                  className="location-container"
                >
                  <li
                    className="selected"
                    onClick={[Function]}
                    role="button"
                  >
                    Laboratory
                  </li>
                </ul>
              </div>
            </li>
            <li
              className="logout"
            >
              <a
                href="../../appui/header/logout.action?successUrl=undefined"
              >
                Logout
                <i
                  className="icon-signout small"
                />
              </a>
            </li>
          </ul>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              href="../../referenceapplication/home.page"
            >
              <img
                alt=""
                src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
              />
            </a>,
            "className": "logo",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img
                alt=""
                src="../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png"
              />,
              "href": "../../referenceapplication/home.page",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "",
                "src": "../../ms/uiframework/resource/uicommons/images/logo/openmrs-with-title-small.png",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "a",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="identifier"
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
                tabIndex="0"
              >
                <i
                  className="icon-user small"
                />
                admin
                <i
                  className="icon-caret-down appui-icon-caret-down link"
                />
                <i
                  className="icon-caret-up link appui-toggle"
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                />
              </li>,
              <li
                className="change-location"
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  <i
                    className="icon-map-marker small"
                  />
                  <span
                    id="selected-location"
                  >
                    Laboratory
                  </span>
                  <i
                    className="link icon-caret-down"
                  />
                </a>
                <div>
                  <ul
                    className="location-container"
                  >
                    <li
                      className="selected"
                      onClick={[Function]}
                      role="button"
                    >
                      Laboratory
                    </li>
                  </ul>
                </div>
              </li>,
              <li
                className="logout"
              >
                <a
                  href="../../appui/header/logout.action?successUrl=undefined"
                >
                  Logout
                  <i
                    className="icon-signout small"
                  />
                </a>
              </li>,
            ],
            "className": "user-options",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <i
                    className="icon-user small"
                  />,
                  "admin",
                  <i
                    className="icon-caret-down appui-icon-caret-down link"
                  />,
                  <i
                    className="icon-caret-up link appui-toggle"
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                  />,
                  undefined,
                ],
                "className": "identifier",
                "onClick": [Function],
                "role": "button",
                "style": Object {
                  "cursor": "pointer",
                },
                "tabIndex": "0",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-user small",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "admin",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-caret-down appui-icon-caret-down link",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-caret-up link appui-toggle",
                    "style": Object {
                      "display": "none",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                undefined,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <i
                      className="icon-map-marker small"
                    />
                    <span
                      id="selected-location"
                    >
                      Laboratory
                    </span>
                    <i
                      className="link icon-caret-down"
                    />
                  </a>,
                  <div>
                    <ul
                      className="location-container"
                    >
                      <li
                        className="selected"
                        onClick={[Function]}
                        role="button"
                      >
                        Laboratory
                      </li>
                    </ul>
                  </div>,
                ],
                "className": "change-location",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <i
                        className="icon-map-marker small"
                      />,
                      <span
                        id="selected-location"
                      >
                        Laboratory
                      </span>,
                      <i
                        className="link icon-caret-down"
                      />,
                    ],
                    "href": "#",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "icon-map-marker small",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Laboratory",
                        "id": "selected-location",
                      },
                      "ref": null,
                      "rendered": "Laboratory",
                      "type": "span",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "link icon-caret-down",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                  ],
                  "type": "a",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <ul
                      className="location-container"
                    >
                      <li
                        className="selected"
                        onClick={[Function]}
                        role="button"
                      >
                        Laboratory
                      </li>
                    </ul>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <li
                          className="selected"
                          onClick={[Function]}
                          role="button"
                        >
                          Laboratory
                        </li>,
                      ],
                      "className": "location-container",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": "6sedds-tahs7hh",
                        "nodeType": "host",
                        "props": Object {
                          "children": "Laboratory",
                          "className": "selected",
                          "onClick": [Function],
                          "role": "button",
                        },
                        "ref": null,
                        "rendered": "Laboratory",
                        "type": "li",
                      },
                    ],
                    "type": "ul",
                  },
                  "type": "div",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="../../appui/header/logout.action?successUrl=undefined"
                >
                  Logout
                  <i
                    className="icon-signout small"
                  />
                </a>,
                "className": "logout",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Logout",
                    <i
                      className="icon-signout small"
                    />,
                  ],
                  "href": "../../appui/header/logout.action?successUrl=undefined",
                },
                "ref": null,
                "rendered": Array [
                  "Logout",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "icon-signout small",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                ],
                "type": "a",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
